# Nokai

./: .gitignore  README.md  ROADMAP_v09.md  Untitled.ipynb  genesis_test_output.txt  notebook4f58f94f47-1-1.ipynb  project.md  pyproject.toml  requirements.txt  test_brain.py
.agent/workflows/: blue-apple-experiment.md
data/: tokenizer.json
docs/: ARCHITECTURE.md  NEUROMORPHIC_ARCHITECTURE.md  NOKAI_V2_ARCHITECTURE.md  V09_1.8B_ARCHITECTURE.md
examples/: train_neuromorphic.py  train_small.py
nokai/: __init__.py  brain.py  config.py  h100_optimizer.py  model.py
nokai/attention/: __init__.py
nokai/cortex/: __init__.py  column.py  cortex.py  layer.py
nokai/data/: __init__.py  dataloader.py
nokai/genesis/: __init__.py  binding.py  learning.py  memory.py  neuromodulation.py  rnu.py  structural.py  ternary.py
nokai/hippocampus/: __init__.py  memory.py  pattern_separation.py  retrieval.py
nokai/learning/: __init__.py  hebbian.py  hebbian_v2.py  predictive.py
nokai/limbic/: __init__.py  dacc.py  dopamine.py  dopamine_v2.py  striatum.py
nokai/memory/: __init__.py  (+2 more)
scripts/: __init__.py  best-model.py  biomamba_v4.py  chat.py  chat_cognitive.py  download_data.py  experiment_one_shot.py  experiment_v06_advanced.py  experiment_v07_agi.py  experiment_v08_asi.py  inspect_checkpoint.py  quick_start.py  test_cognitive_v2.py  test_genesis.py  test_model.py  test_v09_1.8B.py  train_cognitive_v2.py  train_genesis_small.py  train_v09_1.8B_standard.py  train_v09_1.8B_turbo.py  train_v09_h100.py  train_v09_scaling.py  train_wikipedia.py  validate_fixes.py
tests/: __init__.py  test_nokai.py
(+8 files in other folders)
