[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nokai"
version = "0.1.0"
description = "Bio-Inspired Artificial Brain Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NÅkai Research Team"}
]
keywords = ["ai", "neural-networks", "brain-inspired", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "einops>=0.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
full = [
    "hnswlib>=0.7.0",
    "faiss-cpu>=1.7.4",
    "tokenizers>=0.15.0",
    "wandb>=0.16.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourname/nokai"
Documentation = "https://nokai.readthedocs.io"
Repository = "https://github.com/yourname/nokai"

[tool.setuptools.packages.find]
where = ["."]
include = ["nokai*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
